--- a/build.gradle
+++ b/build.gradle
@@ -13,18 +13,23 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.+"
     compile 'junit:junit:4.12'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.h2database:h2:1.4.191'
-    compile 'org.slf4j:slf4j-api:1.7.12'
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'org.slf4j:slf4j-log4j12:1.7.25'
 }
 
 sourceSets {
     main {
-        java.srcDirs = ['src']
+        java.srcDirs = ['src/main/java']
     }
     test {
-        java.srcDirs = ['test']
+        java.srcDirs = ['src/test/java']
+    }
+    resources{
+        java.srcDirs = ['src/main']
     }
 }
 
